@@ -222,7 +222,7 @@ To build Octave's sources the list of Fink packages below need to be installed.
   fltk-aqua-shlibs
   glpk-dev
   glpk-shlibs
-  gnuplot (>= 4.2.6)
+  gnuplot (>= 4.4)
   graphicsmagick (<= 1.3.7)
   graphicsmagick-shlibs (<= 1.3.7)
   hdf5 (>= 1.6.5)
