@@ -1,12 +1,7 @@
-Octave works best with gnuplot 4.4 or higher, which is available from
+Octave requires gnuplot 4.4 or higher, which is available from
 http://www.gnuplot.info.
-
-In versions prior to 4.2.6 it is not possible to use the mouse to zoom in
-on plots.  This is a limitation of earlier versions of gnuplot, which are
-unable to zoom when the data it plots is not stored in a file.
-
 
 John W. Eaton
 jwe@octave.org
 
-Last updated: Tue Jan  4 18:55:56 PST 2011
+Last updated: Wed Sep 14 12:25:25 PDT 2016
